# fastapi-vehicle-manager

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  pytest_output.txt
migrations/: env.py
migrations/versions/: 7f86e317e469_add_user_auth_tables.py  b785d4f68ae7_change_fields_to_string.py  bdbe3613daca_modify_table_users.py  c0137104ae79_initial_migration.py  c896dc431efb_make_vehicle_id_nullable.py  cee5d5189eeb_create_tables_client_and_address.py
src/controller/: vehicle_controller.py
src/core/: database.py  exceptions.py  settings.py
src/domain/client/: model.py  repository.py  router.py  service.py
src/domain/client/schemas/: register.py
src/domain/vehicle/: model.py  repository.py  router.py  service.py
src/domain/vehicle/schemas/: __init__.py  vehicle_create.py  vehicle_filter.py  vehicle_update.py
src/model/: _base.py  vehicle.py
src/model/dto/: vehicle_dto.py
src/security/domain/user/: model.py  repository.py  router.py  service.py
src/security/domain/user/schemas/: user_schemas.py
src/security/services/: auth_config.py
src/shared/model/: address.py
src/view/: vehicle_repository.py  vehicle_service.py
tests/: conftest.py
tests/integration/: test_vehicle_api.py
tests/unit/: test_vehicle_service.py
